--- a/src/components/common/FormsControls/FormsControls.module.css
+++ b/src/components/common/FormsControls/FormsControls.module.css
@@ -5,3 +5,10 @@
 .formControl.error span {
     color: red
 }
+
+.formSummaryError {
+    border: solid red 1px;
+    padding: 5px;
+    color: red;
+
+}
